# tbjcReaction

./: BEAMCOMP.hpp  BEAMCOMPGENERATOR.cc  CMakeLists.txt  Configuration.in  Configuration.in~  Configuration1.in  Configuration2.in  G4History.macro  GasTargetConfiguration.in  SolidTargetConfiguration.in  TRIMOUT.txt  Untitled-1 (another copy).nb  Untitled-1.nb  compare.nb  energydeposit.dat~  nohup.out  output.root  output.txt  run1.mac  tbjcMeg.txt  tbjccut0.root  tbjcexample.cc  test.cxx  tt.cxx  tt.cxx~  vis.mac
8/: 1.root  2.root  3.root  4.root  5.root  6.root  converter  linearfit.py  out.root  out2.root  out3.root  reader.cxx  tbjc.root
include/: AMATRIX.hpp  ATOMICMASSTABLE.hpp  BEAMCOMP.hpp  BEAMCOMPGENERATOR.hpp  DATARECORDER.hpp  FOURVECT.hpp  KINECAL.hpp  P4VECTOR.hpp  TBJCBEAM.hpp  TBJCINTERFACE.hpp  constants.hpp  tbjcActionInitialization.hh  tbjcDetectorConstruction.hh  tbjcEventAction.hh  tbjcExternals.hh  tbjcMagneticField.hh  tbjcMagneticField.hh~  tbjcPhysListEmStandard.hh  tbjcPhysicsList.hh  tbjcPhysicsList.hh~  tbjcPrimaryGeneratorAction.hh  tbjcRun.hh  tbjcRunAction.hh  tbjcSteppingAction.hh  tbjcglobals.hh
src/: .tbjcPrimaryGeneratorAction.cc.swp  AMATRIX.cc  ATOMICMASSTABLE.cc  BEAMCOMP.cc  BEAMCOMPGENERATOR.cc  DATARECORDER.cc  FOURVECT.cc  KINECAL.cc  P4VECTOR.cc  PhysicsList.cc  TBJCBEAM.cc  TBJCINTERFACE.cc  TBJCINTERFACE.cc~  main.cpp  tbjcActionInitialization.cc  tbjcDetectorConstruction.cc  tbjcDetectorConstruction.cc~  tbjcEventAction.cc  tbjcMagneticField.cc  tbjcMagneticField.cc~  tbjcPhysListEmStandard.cc  tbjcPhysicsList.cc  (+6 more)
(+12 files in other folders)
